--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Coming Soon</h1>
-    <h3>Meanwhile check my Github and LinkedIn</h3>
-    <div class="social--links">
-        <a href="https://www.linkedin.com/in/lahiruhet" class="fa fa-linkedin"></a>
-        <a href="https://github.com/lahiruhet" class="fa fa-github"></a>
-        <a href="https://twitter.com/cyantre" class="fa fa-twitter"></a>
-    </div>
+    <main>
+        <h1>Coming Soon</h1>
+        <h3>Meanwhile check my Github and LinkedIn</h3>
+        <div class="social--links">
+            <a href="https://www.linkedin.com/in/lahiruhet" class="fa fa-linkedin"></a>
+            <a href="https://github.com/lahiruhet" class="fa fa-github"></a>
+            <a href="https://twitter.com/cyantre" class="fa fa-twitter"></a>
+        </div>
+    </main>
+    <footer class="footer--class">
+        <p class="coytxt">© Copyright LahiruHetti. All Rights Reserved</p>
+    </footer>
 </body>
 </html> 
