--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </main>
     <footer class="footer--class">
-        <p class="coytxt">© Copyright LahiruHetti. All Rights Reserved</p>
+        <p class="coytxt">© Copyright @lahiruhet. All Rights Reserved</p>
     </footer>
 </body>
 </html> 
