--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <main>
-        <h1>Coming Soon</h1>
+        <h1>v2.0 <br> in the works</h1>
         <h3>Meanwhile check my Github and LinkedIn</h3>
         <div class="social--links">
             <a href="https://www.linkedin.com/in/lahiruhet" class="fa fa-linkedin"></a>
