--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
-    <title>@LahiruHet</title>
-    <link rel="icon" type="image/x-icon" href="/images/portfolio.png">
-</head>
-<body>
-    <main>
-        <h1>v2.0 <br> in the works</h1>
-        <h3>Meanwhile check my Github and LinkedIn</h3>
-        <div class="social--links">
-            <a href="https://www.linkedin.com/in/lahiruhet" class="fa fa-linkedin"></a>
-            <a href="https://github.com/lahiruhet" class="fa fa-github"></a>
-            <a href="https://twitter.com/cyantre" class="fa fa-twitter"></a>
-        </div>
-    </main>
-    <footer class="footer--class">
-        <p class="coytxt">© Copyright @lahiruhet. All Rights Reserved</p>
-    </footer>
-</body>
-</html> 
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://i.imgur.com/UjZZQLK.png"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@lahiruhet</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
